[gd_scene load_steps=2 format=3 uid="uid://xa5pgj6u2rea"]

[ext_resource type="Script" path="res://lemon.gd" id="1_p8fci"]

[node name="Lemon" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p8fci")
lemon_length = 70
break_length = 20

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.175
offset_right = -1.0
offset_bottom = 0.599991
theme_override_colors/font_color = Color(0.79, 0.77973, 0.1738, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 69
text = "Lemon Timer :)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerBox" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.324653
anchor_top = 0.191358
anchor_right = 0.657986
anchor_bottom = 0.330247
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.25098)
metadata/_edit_use_anchors_ = true

[node name="TimeDisplay" type="Label" parent="TimerBox"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.992
anchor_bottom = 0.978
offset_right = 0.071991
offset_bottom = -0.0200043
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 46
text = "23:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumberLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.596
anchor_right = 0.5
anchor_bottom = 0.761
offset_left = 1.0
offset_top = 2.79199
offset_right = -1.0
offset_bottom = -3.12802
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 46
text = "How Many Lemons?"
horizontal_alignment = 2
vertical_alignment = 1

[node name="NumberPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.65
anchor_right = 1.0
anchor_bottom = 0.704
offset_left = 23.0
offset_top = 0.799988
offset_right = -410.0
offset_bottom = 5.80795

[node name="MinusButton" type="Button" parent="NumberPanel"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 39.0
text = "-"

[node name="PlusButton" type="Button" parent="NumberPanel"]
layout_mode = 0
offset_left = 111.0
offset_right = 143.0
offset_bottom = 39.0
text = "+"

[node name="NumberDisplay" type="Label" parent="NumberPanel"]
layout_mode = 0
offset_left = 36.0
offset_right = 110.0
offset_bottom = 38.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.283
anchor_right = 0.719
anchor_bottom = 1.0
offset_left = 120.984
offset_top = 523.0
offset_right = -132.288
offset_bottom = -53.0
theme_override_font_sizes/font_size = 46
text = "Start!"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="NumberPanel/MinusButton" to="." method="_on_minus_button_pressed"]
[connection signal="pressed" from="NumberPanel/PlusButton" to="." method="_on_plus_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
